update after 1 year

--- a/Obs/Views/Admin/Dersler.cshtml
+++ b/Obs/Views/Admin/Dersler.cshtml
@@ -11,7 +11,7 @@
                     <td>@ders.Id</td>
                     <th scope="col">Ders Adı</th>
                     <td>@ders.Name</td>
-                    <th scope="col">Bölüm</th>
+                    <th scope="col">Bölüm Id</th>
                     <td>@ders.BolumId</td>
                     <th scope="col">Öğretim Görevlisi Id</th>
                     <td>@ders.AkademisyenId</td>
