--- a/Obs/Views/Admin/Index.cshtml
+++ b/Obs/Views/Admin/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@{ ViewData["Title"] = "Admin Home Page"; }
 
+
 <div class="text-center">
     <h1 class="display-4">Hoş Geldiniz</h1>
     <br />
     <br />
-    <p> Kocaeli Üniversitesi resmi sayfasına gitmek için<a href="https://www.kocaeli.edu.tr/"> tıklayınız</a>.</p>
-    <p> Kocaeli Üniversitesi Meslek YüksekOkulu resmi sayfasına gitmek için<a href="http://kmyo.kocaeli.edu.tr/"> tıklayınız</a>.</p>
+    <p> Marmara Üniversitesi resmi sayfasına gitmek için<a href="https://www.marmara.edu.tr/"> tıklayınız</a>.</p>
 </div>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
@@ -14,53 +14,54 @@
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Konser Etkinliği
+                    Engelsiz Üniversite Ödülleri
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                    <strong>Türk Halk Müziği Korosu Konseri Duyurusu Hk.<br> </strong><a>Üniversitemiz Sağlık Kültür ve Spor Daire Başkanlığı bünyesinde faaliyet gösteren THM (Türk Halk Müziği) uygulama topluluğu korosu Şef İsmet ÜNSAL yönetiminde 31 Mayıs 2022 Salı günü saat 15:00 da Prof.Dr.Baki Komsuoğlu Kültür ve Kongre Merkezinde (Gençleşen Türküler) konser vereceklerdir. Konsere tüm üniversitemizin akademik, idari personel ve öğrenciler davetlidir.</a>
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Kocaeli Üniversitesi Mobil Uygulaması
-                </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <strong>Okulumuzun Mobil Uygulaması Hak.<br> </strong>Değerli Öğrencimiz,
-                    Birimimiz tarafından geliştirilen Üniversitemiz Öğrenci Bilgi Sistemi'nin KOÜ Mobil isimli mobil uygulaması Google Play Store'da yayınlanmıştır. Uygulamanın iOS ve HarmonyOS versiyonları ise kısa süre içinde yayınlacaktır. Uygulamanın Android versiyonunu indirmek için
-                </div>
-            </div>
-        </div>
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Kütüphane Anketi
-                </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                    <strong>Kütüphane Kullanıcı Memnuniyet Anketi Hk.<br> </strong>Değerli Öğrencilerimiz,
+                    <strong>Marmara Üniversitesi YÖK 2023 “Engelsiz Üniversite Ödülleri” Töreninde 7 Bayrak Aldı<br> </strong><a>
+                        Yükseköğretim Kurulu Başkanı Erol Özvar, 2018’den bu yana verilen “Engelsiz Üniversite Ödülleri”ne bu yıl layık görülen üniversiteleri açıkladı.
 
-                    KOÜ Kütüphane Kullanıcı Memnuniyet Anketi aracılığı ile geri bildirimde bulunmanız bizim için çok önemlidir. Anketimize katılımınızı bekliyoruz.
-                    İlginiz için teşekkür ederiz.
+                        Üniversitelere ödülleri Yükseköğretim Kurulu’nda düzenlenen “2023 Engelsiz Üniversiteler Ödül Töreni” ile Yükseköğretim
+                        Kurulu Başkanı Prof. Dr. Erol Özvar tarafından verildi. Özvar, törende yaptığı konuşmada,
+                        eğitimde fırsat eşitliğini her düzeyde sağlayabilmek amacıyla yükseköğretime girişte ve eğitim
+                        sürecinde yaşanan engelleri ortadan kaldırmak için “engelsiz erişim” ve “engelsiz eğitim” başlığı adı altında çalışmalar yürüttüklerini belirtti.
+                        Yükseköğretim Kurulu tarafından düzenlenen “Engelsiz Üniversitelere Bayrak ve Nişan” ödülü töreninde, Marmara Üniversitesi 7 bayrak alırken, Rektör Prof. Dr. Mustafa Kurt, gerçekleştirilen törende ödülünü YÖK Başkanı Prof. Dr. Erol Özvar’dan aldı.
+                    </a>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        MİTTO-Küresel Temiz Teknoloji Girişimcilik Programı
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>Okulumuzun Mobil Uygulaması Hak.<br> </strong>Değerli Öğrencimiz,
+                        Değerli Öğrencimiz;
+                        Küresel Temiz Teknoloji Girişimcilik Programı (Global Cleantech Innovation Programme-GCIP)  2. Fazı kapsamında GCIP Türkiye Hızlandırıcı Programı'na başvurular açılmıştır.
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        İnternet Destek Başvuru Sonuçları
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <strong>İnternet Destek Başvuru Sonuçları Hk.<br> </strong>Değerli Öğrencilerimiz,
 
-                    <a href="#">https://forms.gle/EnarTYfUs6cz85Fb9</a>
+                        İnternet Destek Bursu 2023" Başvuru Sonuçlarını Öğrenmek İçin Tıklayınız
+
+
+                        <a href="#">https://www.marmara.edu.tr/</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
 </body>
 </html>
-
-<footer style="width:100%;  margin-bottom:0; font-size:14px; bottom:0; position: fixed; margin-top:33px; clear:both">
-    <div align="center">
-
-        <span class="label" style="background-color:white">2001-2022 Kocaeli Üniversitesi</span>
-    </div>
-</footer>
